@@ -1,3 +1,8 @@
+*gitlab-shell-5.10.0 (16 Feb 2018)
+
+  16 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.10.0.ebuild:
+  dev-vcs/gitlab-shell:  Add ebuild for version 5.10.0
+
 *gitlab-shell-5.9.3 (06 Nov 2017)
 
   06 Nov 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.9.3.ebuild,
